refactor contact page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         class="text-gray-700 hover:text-red-600 font-medium transition">Services</a>
                     <a href="projects.html" class="text-gray-700 hover:text-red-600 font-medium transition">Projects</a>
                     <a href="team.html" class="text-gray-700 hover:text-red-600 font-medium transition">Team</a>
-                    <a href="index.html#contact"
+                    <a href="contact.html"
                         class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 transition font-medium">Contact
                         Us</a>
                 </div>
@@ -76,7 +76,7 @@
                     class="block text-gray-700 hover:text-red-600 font-medium py-2">Services</a>
                 <a href="projects.html" class="block text-gray-700 hover:text-red-600 font-medium py-2">Projects</a>
                 <a href="team.html" class="block text-gray-700 hover:text-red-600 font-medium py-2">Team</a>
-                <a href="index.html#contact"
+                <a href="contact.html"
                     class="block bg-red-600 text-white px-6 py-2 rounded-full text-center font-medium">Contact Us</a>
             </div>
         </div>
@@ -100,7 +100,7 @@
                         & Structural Engineering.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="#contact"
+                        <a href="contact.html"
                             class="bg-red-600 text-white px-8 py-4 rounded-full font-semibold hover:bg-red-700 transition text-center shadow-lg">
                             Get Started
                         </a>
@@ -714,123 +714,10 @@
                 Let's discuss how Fortune Three Engineers can help bring your infrastructure vision to life. Get in
                 touch with our team today.
             </p>
-            <a href="#contact"
+            <a href="contact.html"
                 class="bg-white text-red-600 px-10 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition shadow-xl inline-block">
                 Contact Us Now
             </a>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section-padding bg-gray-50">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-16">
-                <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Get In Touch</h2>
-                <div class="w-24 h-1 bg-gradient-to-r from-red-600 to-blue-600 mx-auto mb-6"></div>
-                <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-                    We'd love to hear from you. Send us a message and we'll respond as soon as possible.
-                </p>
-            </div>
-
-            <div class="grid md:grid-cols-2 gap-12">
-                <!-- Contact Information -->
-                <div>
-                    <div class="bg-white rounded-xl p-8 shadow-lg mb-6">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-6">Contact Information</h3>
-                        <div class="space-y-6">
-                            <div class="flex items-start">
-                                <div
-                                    class="w-12 h-12 bg-red-100 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
-                                    <i class="fas fa-map-marker-alt text-red-600"></i>
-                                </div>
-                                <div>
-                                    <h4 class="font-semibold text-gray-900 mb-1">Address</h4>
-                                    <p class="text-gray-600">No: 2238 Arlington Estate<br>Hatfield, Harare<br>Zimbabwe
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div class="flex items-start">
-                                <div
-                                    class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
-                                    <i class="fas fa-phone text-blue-600"></i>
-                                </div>
-                                <div>
-                                    <h4 class="font-semibold text-gray-900 mb-1">Phone</h4>
-                                    <p class="text-gray-600">+263 242 301 279<br>+263 773 436 391</p>
-                                </div>
-                            </div>
-
-                            <div class="flex items-start">
-                                <div
-                                    class="w-12 h-12 bg-teal-100 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
-                                    <i class="fas fa-envelope text-teal-600"></i>
-                                </div>
-                                <div>
-                                    <h4 class="font-semibold text-gray-900 mb-1">Email</h4>
-                                    <p class="text-gray-600">trymore@fortunethreeengineers.com</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Banking Details -->
-                    <div class="bg-white rounded-xl p-8 shadow-lg">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-6">Banking Details</h3>
-                        <div class="space-y-3 text-sm">
-                            <p><strong>Bank:</strong> FBC</p>
-                            <p><strong>Account Name:</strong> Fortune Three Engineering Pvt Ltd</p>
-                            <p><strong>Account (ZWL):</strong> 1496047350135</p>
-                            <p><strong>Account (USD):</strong> 5196047350236</p>
-                            <p><strong>Branch:</strong> Borrowdale</p>
-                            <p><strong>Branch Code:</strong> 8127</p>
-                            <p><strong>Swift Code:</strong> FBCPZWHA</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Contact Form -->
-                <div class="bg-white rounded-xl p-8 shadow-lg">
-                    <h3 class="text-2xl font-bold text-gray-900 mb-6">Send Us a Message</h3>
-                    <form id="contact-form" class="space-y-6" onsubmit="handleFormSubmit(event)">
-                        <div>
-                            <label for="name" class="block text-gray-700 font-semibold mb-2">Full Name</label>
-                            <input type="text" id="name" name="name"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-600 focus:border-transparent transition"
-                                placeholder="John Doe" required>
-                        </div>
-                        <div>
-                            <label for="email" class="block text-gray-700 font-semibold mb-2">Email Address</label>
-                            <input type="email" id="email" name="email"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-600 focus:border-transparent transition"
-                                placeholder="john@example.com" required>
-                        </div>
-                        <div>
-                            <label for="phone" class="block text-gray-700 font-semibold mb-2">Phone Number</label>
-                            <input type="tel" id="phone" name="phone"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-600 focus:border-transparent transition"
-                                placeholder="+263 77 123 4567">
-                        </div>
-                        <div>
-                            <label for="subject" class="block text-gray-700 font-semibold mb-2">Subject</label>
-                            <input type="text" id="subject" name="subject"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-600 focus:border-transparent transition"
-                                placeholder="Project Inquiry" required>
-                        </div>
-                        <div>
-                            <label for="message" class="block text-gray-700 font-semibold mb-2">Message</label>
-                            <textarea id="message" name="message" rows="5"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-600 focus:border-transparent transition resize-none"
-                                placeholder="Tell us about your project..." required></textarea>
-                        </div>
-                        <button type="submit"
-                            class="w-full bg-red-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-red-700 transition shadow-lg transform hover:scale-105">
-                            <i class="fas fa-paper-plane mr-2"></i>Send Message
-                        </button>
-                        <div id="form-message" class="hidden mt-4 p-4 rounded-lg"></div>
-                    </form>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -875,7 +762,7 @@
                         </li>
                         <li><a href="projects.html" class="text-gray-400 hover:text-white transition">Projects</a></li>
                         <li><a href="team.html" class="text-gray-400 hover:text-white transition">Our Team</a></li>
-                        <li><a href="index.html#contact" class="text-gray-400 hover:text-white transition">Contact</a>
+                        <li><a href="contact.html" class="text-gray-400 hover:text-white transition">Contact</a>
                         </li>
                     </ul>
                 </div>
