--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                     <a href="projects.html"
                         class="text-gray-700 hover:text-red-600 font-medium transition border-b-2 border-red-600">Projects</a>
                     <a href="team.html" class="text-gray-700 hover:text-red-600 font-medium transition">Team</a>
-                    <a href="index.html#contact"
+                    <a href="contact.html"
                         class="bg-red-600 text-white px-6 py-2 rounded-full hover:bg-red-700 transition font-medium">Contact
                         Us</a>
                 </div>
@@ -76,7 +76,7 @@
                     class="block text-gray-700 hover:text-red-600 font-medium py-2">Services</a>
                 <a href="projects.html" class="block text-gray-700 hover:text-red-600 font-medium py-2">Projects</a>
                 <a href="team.html" class="block text-gray-700 hover:text-red-600 font-medium py-2">Team</a>
-                <a href="index.html#contact"
+                <a href="contact.html"
                     class="block bg-red-600 text-white px-6 py-2 rounded-full text-center font-medium">Contact Us</a>
             </div>
         </div>
@@ -414,7 +414,7 @@
             <p class="text-xl mb-8 max-w-2xl mx-auto opacity-90">
                 Let's discuss how Fortune Three Engineers can help bring your infrastructure vision to life.
             </p>
-            <a href="index.html#contact"
+            <a href="contact.html"
                 class="bg-white text-red-600 px-10 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition shadow-xl inline-block">
                 Contact Us Now
             </a>
@@ -448,7 +448,7 @@
                         </li>
                         <li><a href="projects.html" class="text-gray-400 hover:text-white transition">Projects</a></li>
                         <li><a href="team.html" class="text-gray-400 hover:text-white transition">Our Team</a></li>
-                        <li><a href="index.html#contact" class="text-gray-400 hover:text-white transition">Contact</a>
+                        <li><a href="contact.html" class="text-gray-400 hover:text-white transition">Contact</a>
                         </li>
                     </ul>
                 </div>
