update substations images

--- a/index.html
+++ b/index.html
@@ -476,47 +476,8 @@
 
                 <!-- Project Preview 2 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover">
-                    <div
-                        class="w-full h-64 bg-gradient-to-br from-blue-50 to-blue-100 flex items-center justify-center">
-                        <svg class="w-full h-full p-6" viewBox="0 0 400 300" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <!-- Substation Structure -->
-                            <rect x="50" y="100" width="300" height="150" rx="5" fill="#1E40AF" opacity="0.2" />
-                            <rect x="60" y="110" width="280" height="130" rx="3" fill="#3B82F6" opacity="0.3" />
-
-                            <!-- Power Lines -->
-                            <line x1="0" y1="80" x2="400" y2="80" stroke="#1E40AF" stroke-width="3"
-                                stroke-linecap="round" />
-                            <line x1="0" y1="100" x2="400" y2="100" stroke="#2563EB" stroke-width="2"
-                                stroke-linecap="round" />
-                            <line x1="0" y1="120" x2="400" y2="120" stroke="#3B82F6" stroke-width="2"
-                                stroke-linecap="round" />
-
-                            <!-- Transformers -->
-                            <rect x="120" y="140" width="60" height="80" rx="3" fill="#1E40AF" />
-                            <rect x="130" y="150" width="40" height="60" fill="#3B82F6" />
-                            <circle cx="150" cy="180" r="8" fill="#60A5FA" />
-
-                            <rect x="220" y="140" width="60" height="80" rx="3" fill="#1E40AF" />
-                            <rect x="230" y="150" width="40" height="60" fill="#3B82F6" />
-                            <circle cx="250" cy="180" r="8" fill="#60A5FA" />
-
-                            <!-- Control Panels -->
-                            <rect x="80" y="200" width="80" height="40" rx="2" fill="#2563EB" />
-                            <rect x="240" y="200" width="80" height="40" rx="2" fill="#2563EB" />
-
-                            <!-- Electrical Symbols -->
-                            <circle cx="100" cy="90" r="6" fill="#DC2626" />
-                            <circle cx="200" cy="90" r="6" fill="#DC2626" />
-                            <circle cx="300" cy="90" r="6" fill="#DC2626" />
-
-                            <!-- Safety Fence -->
-                            <line x1="40" y1="250" x2="360" y2="250" stroke="#64748B" stroke-width="2"
-                                stroke-dasharray="5,5" />
-                            <line x1="40" y1="260" x2="360" y2="260" stroke="#64748B" stroke-width="2"
-                                stroke-dasharray="5,5" />
-                        </svg>
-                    </div>
+                    <img src="what_we_do/substation/sub7.jpeg" alt="Substation Construction"
+                        class="w-full h-64 object-cover object-[center_10%]" loading="lazy" width="400" height="256">
                     <div class="p-6">
                         <div class="flex items-center mb-2">
                             <span
