--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,15 @@
     <!-- Preconnect to external domains for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     
     <!-- Preload critical resources -->
+    <link rel="preload" href="css/tailwind.css" as="style">
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="preload" href="images/logo/logo.png" as="image">
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/tailwind.css">
 
     <!-- Google Fonts - Nunito with display=swap for better performance -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900&display=swap"
